syntax =  "proto3";
package TableProto;

message MonsterCfg
{
	int32 ID = 1;
	string NAME = 2;
	int32 ATK = 3;
	int32 HP = 4;

}

message TB_MonsterCfg
{
    repeated MonsterCfg data = 1;
}
