syntax =  "proto3";
package TableProto;

message MonsterCfg222
{
	int32 ID = 1;
	string NAME = 2;
	int32 ATK = 3;
	int32 HP = 4;

}

message TB_MonsterCfg222
{
    repeated MonsterCfg222 data = 1;
}
